# SinePlot

./: .gitignore  CMakeLists.txt  README.md
cmake/: windeployqt.cmake
cmake-scripts/: windeployqt.cmake
headers/: mainwindow.h
sources/: main.cpp  mainwindow.cpp
